(Format: Year/Month/Day)
Changes for 0.9.6:
*03/09/14:
   * Focus fixes (Simon)
     Hopefully fixes mysterious instances of focus not being set right.
     Window.cc fluxbox.cc
   * More optimization to reduce flicker in titlebar
     Screen.cc, FbWinFrame.cc/hh, TextButton.hh/cc, FbWindow.hh/cc
*03/09/13:
   * Fixed minor compilation problem for Solaris (Thanks NivenHuH)
     Resource.hh
   * Added new theme items (Henrik)
     * menu.borderWidth
     * menu.borderColor
     * menu.bevelWidth
     * window.handleWidth
     * window.bevelWidth
     MenuTheme.cc, FbWinFrameTheme.cc/hh, RootTheme.hh/cc, 
     Window.cc, Screen.cc
   * Optimized rendering for windows (Henrik)
     Reduced flicker
     FbWinFrame.hh/cc, Window.cc
   * Changed fallback options for window button pixmaps (Henrik)
     *.focus/unfocus will fallback to old style if no pixmap is detected
     WinButton.cc
   * Added anjuta, blender -w, wings, rox filer, vmware, xlock 
     to fluxbox-generate_menu  (Thanks Pol)
*03/09/12:
   * Fix a couple of issues related to windows reparenting themselves
     to escape the WM. Hopefully fixes mplayer/vncviewer fullscreen
     problems.  (Simon)
     fluxbox.cc Window.cc
   * Fix window gravity handling (Simon)
     - should fix some offset fullscreen issues
     FbWinFrame.hh/cc WinClient.hh/cc Window.cc
*03/09/10:
   * Fixed buffer for TextButton (Henrik)
     Reduces flicker
     TextButton.hh/cc, Button.cc/hh
   * Added Move action (Thanks Mathias Gumz)
     Usage: Move x y
     FbCommandFactory.cc, FbCommandFactory.hh
   * Fixed minor bug in IconbarTool (Henrik)
     IconbarTool.hh/cc
   * Added update timer for transparency in FbWinFrame (Henrik)
     Updates the transparency 1 usec after each move,
     this speeds up moving in opaque mode
     * new resource item
        session.updateDelayTime: <micro sec>
     This delay decides when the transparency should update when you're moving
     FbWinFrame.hh/cc
*03/09/08: