@@ -1,5 +1,9 @@
 (Format: Year/Month/Day)
 Changes for 0.9.6:
+*03/09/16:
+   * Apply gravity when changing decorations (Simon)
+     - also fix gravity when decorations not present
+     Window.cc FbWinFrame.cc
 *03/09/14:
    * Focus fixes (Simon)
      Hopefully fixes mysterious instances of focus not being set right.
